# NitroCppTest-TimurGaliakbarov

./: CMakeLists.txt  README.md  main.cpp  parser.h  rectangle.cpp  rectangle.h  rectangle_intersections.h  tests.cc
